# EasyVulkan

./: .gitignore  CMakeLists.txt  README.md
easy_vulkan/: CMakeLists.txt
easy_vulkan/include/: easy_vulkan.h  ev_buffer.h  ev_command_buffer.h  ev_command_pool.h  ev_debug.h  ev_descriptor_pool.h  ev_descriptor_set.h  ev_descriptor_set_layout.h  ev_device.h  ev_fence.h  ev_image.h  ev_instance.h  ev_memory.h  ev_pipeline_layout.h  ev_queue.h  ev_render_pass.h  ev_shader.h  ev_swapchain.h  ev_utility.h
easy_vulkan/include/base/: ev_base.h  ev_device_base.h
easy_vulkan/include/builder/: ev_buffer_ci.h  ev_device_ci.h  ev_instance_ci.h  ev_memory_ai.h  ev_queue_ci.h
easy_vulkan/include/factory/: ev_buffer_factory.h  ev_factory.h  ev_memory_factory.h
easy_vulkan/include/initializer/: ev_buffer_ci.h  ev_builder.h  ev_device_ci.h  ev_image_ci.h  ev_initializer.h  ev_instance_ci.h  ev_memory_ai.h  ev_queue_ci.h  ev_queue_si.h  ev_render_pass_ci.h
easy_vulkan/src/: ev_buffer.cpp  ev_command_buffer.cpp  ev_command_pool.cpp  ev_debug.cpp  ev_descriptor_pool.cpp  ev_descriptor_set.cpp  ev_descriptor_set_layout.cpp  ev_device.cpp  ev_fence.cpp  ev_image.cpp  ev_instance.cpp  ev_memory.cpp  ev_pipeline_layout.cpp  ev_queue.cpp  ev_render_pass.cpp  ev_shader.cpp  ev_swapchain.cpp  ev_utility.cpp
easy_vulkan/src/base/: ev_device_base.cpp
easy_vulkan/src/builder/: ev_buffer_ci.cpp  ev_device_ci.cpp  ev_instance_ci.cpp  ev_memory_ai.cpp  ev_queue_ci.cpp
easy_vulkan/src/factory/: ev_buffer_factory.cpp  ev_memory_factory.cpp
easy_vulkan/src/initializer/: ev_image_ci.cpp  ev_queue_ci.cpp  ev_queue_si.cpp  ev_render_pass_ci.cpp
shaders/test/: test.frag.spv  test.vert  test.vert.spv
test/: CMakeLists.txt
test/src/: ev_buffer_test.cpp  ev_buffer_test.hpp  ev_command_buffer_test.cpp  ev_command_buffer_test.hpp  ev_command_pool_test.cpp  ev_command_pool_test.hpp  ev_device_test.cpp  ev_device_test.hpp  ev_image_test.hpp  ev_instance_test.cpp  ev_instance_test.hpp  ev_render_pass_test.hpp  ev_shader_test.hpp  ev_swapchain_test.cpp  ev_swapchain_test.hpp  main.cpp  test_utility.hpp
