cmake_minimum_required(VERSION 3.10)
PROJECT(easy-vulkan VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/lib)
SET(EASY_VULKAN_HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
SET(EASY_VULKAN_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
SET(VULKAN_SDK $ENV{VULKAN_SDK})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE true)

INCLUDE_DIRECTORIES(${VULKAN_SDK}/include ${EASY_VULKAN_HEADER_DIR})
LINK_DIRECTORIES(${VULKAN_SDK}/lib)
LINK_LIBRARIES(vulkan)

MESSAGE("VULKAN SDK PATH : ${VULKAN_SDK}")

FILE(GLOB EASY_VULKAN_CORE_SOURCE src/*.cpp)
FILE(GLOB EASY_VULKAN_CORE_HEADER include/*.h)

MESSAGE([STATUS] SOURCE FILES : ${EASY_VULKAN_CORE_SOURCE})
MESSAGE([STATUS] HEADER FILES : ${EASY_VULKAN_CORE_HEADER})

ADD_LIBRARY(${CMAKE_PROJECT_NAME} SHARED
    ${EASY_VULKAN_CORE_HEADER}
    ${EASY_VULKAN_CORE_SOURCE}
)

MESSAGE([INFO] ${TARGET_})

MESSAGE([STATUS] "PROJECT VERSION :  ${CMAKE_PROJECT_VERSION}")

# set_target_properties(easy_vulkan_core PROPERTIES VERSION ${CMAKE_PROJECT_VERSION})
# set_target_properties(easy_vulkan_core PROPERTIES SOVERSION 0)
# target_include_directories(easy-vulkan PUBLIC include)
# target_include_directories(easy_vulkan_core PRIVATE src)